// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Location component renders as expected 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ecf0f1",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 26,
        "margin": 24,
        "textAlign": "center",
      }
    }
  >
    acquiring location ...
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
  </View>
</View>
`;

exports[`Location component renders as expected 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ecf0f1",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 26,
        "margin": 24,
        "textAlign": "center",
      }
    }
  >
    errorMessage
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
  </View>
</View>
`;

exports[`Location component renders as expected 3`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ecf0f1",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 26,
        "margin": 24,
        "textAlign": "center",
      }
    }
  >
    defense -&gt; capitole
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
  </View>
</View>
`;

exports[`Location component renders as expected 4`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ecf0f1",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 26,
        "margin": 24,
        "textAlign": "center",
      }
    }
  >
    capitole -&gt; defense
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
  </View>
</View>
`;

exports[`Location component renders as expected 5`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ecf0f1",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 26,
        "margin": 24,
        "textAlign": "center",
      }
    }
  >
    capitole -&gt; defense
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      00h00
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 26,
          "margin": 24,
          "textAlign": "center",
        }
      }
    >
      --:--
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 26,
        "margin": 24,
        "textAlign": "center",
      }
    }
  >
    +
    2
     min.
  </Text>
</View>
`;

exports[`Location component unmount as expected 1`] = `""`;
